--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       content="width=device-width,initial-scale=1,shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Kym Rhys Mallari Portfolio">
+    <meta property="og:description" content="Kym Rhys Mallari Portfolio">
+    <meta property="og:image" content="https://www.pexels.com/photo/kym-rhys-mallari-14907176/">
+    <meta property="og:url" content="https://kymrhys.netlify.app/">
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/default.css" />
