--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Kym Rhys Mallari Portfolio">
     <meta property="og:description" content="Kym Rhys Mallari Portfolio">
-    <meta property="og:image" content="https://www.pexels.com/photo/kym-rhys-mallari-14907176/">
+    <meta property="og:image" content="https://images.pexels.com/photos/14907176/pexels-photo-14907176.jpeg">
     <meta property="og:url" content="https://kymrhys.netlify.app/">
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="/favicon.ico" />
